new company location

--- a/contact.html
+++ b/contact.html
@@ -33,25 +33,13 @@
 			<div id="left">
 				<h1>Our Location</h1>
 				<p>
-					<a href="http://goo.gl/maps/9iVT"><img src="../images/map.png"></a>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13218.793147775807!2d-84.0681603!3d34.0772478!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f5972005ec536d%3A0x264c9f2ed1ae8d57!2s175%20Peachtree%20Industrial%20Blvd%2C%20Sugar%20Hill%2C%20GA%2030518!5e0!3m2!1sen!2sus!4v1612834874286!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				</p>
-				<p style="width:600px;">We are conveniently located in Chamblee off I-285 about a mile inside the perimeter near the intersection of Peachtree
-					Industrial Blvd. and North Peachtree Rd.</p>
-				<p style="width:600px;"><a href="http://goo.gl/maps/aqAm">From I-285</a> you will take exit 31-A southbound. You will go about a mile and turn
-					right onto North Peachtree Rd. ( traffic light at the corner of the CVS and Tune Up Clinic) be prepared to make an immediate
-					left down our driveway directly across from the CVS.</p>
-				<p style="width:600px;"><a href="http://goo.gl/maps/31by">Heading North on Peachtree Industrial Blvd.</a> from Atlanta you will turn left onto
-					North Peachtree Rd. and make an immediate left down the 1st driveway to the left across from CVS.</p>
-				<p style="width:600px;"><a href="http://goo.gl/maps/azWr">Heading South on Peachtree Industrial Blvd.</a> you will go inside I-285 about a mile
-					and turn right onto North Peachtree Rd. (traffic light at CVS and Tune up Clinic) You will then take the immediate left
-					down the first driveway across from CVS.</p>
-				<p style="width:600px;"><b>Please Note: We are located down a long driveway which we share with a towing company.</b></p>
 			</div>
 			<div id="right">
 				<h1>Contact Info</h1>
 				<div id="sidebarBox">
-					<p>(770) 458-4875<br><a href="mailto:northperimeter@aol.com">northperimeter@aol.com</a><br><br>3854 North Peachtree Road<br>Chamblee,
-						GA. 30341<br>(<a href="http://goo.gl/maps/iXFD">Google Maps</a>)</p>
+					<p style="margin-top:0px;padding-top:0px;">(678) 288-9398<br><a href="mailto:northperimeter@aol.com">northperimeter@aol.com</a><br><br>175 Peachtree Industrial Blvd<br>Sugar Hill, GA 30518<br>(<a href="https://goo.gl/maps/U2W9dbzAY39vGe3eA">Google Maps</a>)</p>
 				</div>
 			</div>
 		</div>
